- [DevOps] Update few files for prod.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ client/.vscode
 # ------------------------------------------------------
 # Nginx
 
-nginx/default.conf
+nginx/default.conf.prod
 
 # ------------------------------------------------------
 # Server
