- [DevOps] Uncomment restart key.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
     volumes:
       - ./client:/usr/src/app
       - /usr/src/app/node_modules
-    # restart: unless-stopped
+    restart: unless-stopped
   # -----------------------------------------------------------------
   db:
     container_name: db
